umi email template update

--- a/template/umi_email_client.html
+++ b/template/umi_email_client.html
@@ -49,7 +49,7 @@
                     <tr>
                         <td style="background-color:#fff;padding-bottom:10px;border-left:1px solid #dddee1;border-right:1px solid #dddee1;border-bottom:1px solid #dddee1; padding: 0 60px 40px;">
                             <p style="font-size: 12px; line-height:1.3; color:#60666d; margin:15px 0;font-family: Arial">
-                                <strong>Dubai (Administrative office):</strong> 10th floor, Platinum Tower, Cluster 1, Jumeirah Lakes Towers, Dubai, UAE  Tel: +971 (0) 42 793 800 
+                                <strong>Dubai (Administrative office):</strong> 10th floor, Platinum Tower, Cluster I, Jumeirah Lakes Towers, Dubai, UAE  Tel: +971 (0) 42 793 800 
                             </p>
                             <table width="500" class="btn">
                                 <tr>
