--- a/template/umi_email_client.html
+++ b/template/umi_email_client.html
@@ -28,7 +28,7 @@
                             <table cellpadding="0" border="0" width="100%" cellspacing="0" >
                                 <tr>
                                     <td width="20" class="hidden2">&nbsp;</td>
-                                    <td width="80px;"><a href="http://www.uae-medical-insurance.com/" target="_blank"><img width="80" src="http://resources.pacificprime.com/edm/school_conf/images/umi_80x57.jpg" height="57" alt="UAE" style="display:block" border="0" target="_blank"></a></td>
+                                    <td width="80px;"><a href="https://www.uae-medical-insurance.com/" target="_blank"><img width="80" src="http://resources.pacificprime.com/edm/school_conf/images/umi_80x57.jpg" height="57" alt="UAE" style="display:block" border="0" target="_blank"></a></td>
                                     <td width="20" class="hidden2">&nbsp;</td>
                                     <td width="162px;"><a href="http://www.medstarinsurance.com/" target="_blank"><img width="162" src="http://resources.pacificprime.com/edm/school_conf/images/medstar_162x57.jpg" height="57" alt="Medstar" style="display:block" border="0" target="_blank"></a></td>
                                     <td style="padding-right:20px;">&nbsp;</td>
@@ -54,7 +54,7 @@
                             <table width="500" class="btn">
                                 <tr>
                                     <td align="center" style="background: #28c; color: #fff; font-size: 30px; font-weight: 600; text-align: center;  width:500px;padding-top: 20px ;padding-bottom:20px ;padding-left:60px;padding-right:60px;font-family:arial">
-                                        <a href="http://www.uae-medical-insurance.com/detailed-quote/quote-infomation/?uid={{ uid }}" style="text-decoration:none;  color:#fff; line-heigth:40px">Click to Find Plans Now</a>
+                                        <a href="https://www.uae-medical-insurance.com/detailed-quote/quote-infomation/?uid={{ uid }}" style="text-decoration:none;  color:#fff; line-heigth:40px">Click to Find Plans Now</a>
                                     </td>
                                 </tr>
                             </table>
