--- a/template/pp_email_client.html
+++ b/template/pp_email_client.html
@@ -29,7 +29,7 @@
                             <table cellpadding="0" border="0" width="100%" cellspacing="0" >
                                 <tr>
                                     <td width="20" class="hidden2">&nbsp;</td>
-                                    <td width="200px;"><a href="http://www.pacificprime.com/" target="_blank"><img width="200" src="http://www.pacificprime.com/assets/b/logo.png" height="57" alt="Pacific Prime" style="display:block" border="0" target="_blank"></a></td>
+                                    <td width="200px;"><a href="https://www.pacificprime.com/" target="_blank"><img width="200" src="https://www.pacificprime.com/assets/b/logo.png" height="57" alt="Pacific Prime" style="display:block" border="0" target="_blank"></a></td>
                                     <td style="padding-right:20px;">&nbsp;</td>
                                 </tr>
                             </table>
@@ -55,7 +55,7 @@
                             <table width="500" class="btn">
                                 <tr>
                                     <td align="center" style="background: #28c; color: #fff; font-size: 30px; font-weight: 600; text-align: center;  width:500px;padding-top: 20px ;padding-bottom:20px ;padding-left:60px;padding-right:60px;font-family:arial">
-                                        <a href="http://www.pacificprime.com/detailed-quote/quote-infomation/?uid={{ uid }}" style="text-decoration:none;  color:#fff; line-heigth:40px">Click to Find Plans Now</a>
+                                        <a href="https://www.pacificprime.com/detailed-quote/quote-infomation/?uid={{ uid }}" style="text-decoration:none;  color:#fff; line-heigth:40px">Click to Find Plans Now</a>
                                     </td>
                                 </tr>
                             </table>
